Added theme (Indigo)

--- a/config.toml
+++ b/config.toml
@@ -1,3 +1,3 @@
-baseURL = "http://example.org/"
+baseURL = "http://binaryredneck.net/"
 languageCode = "en-us"
-title = "My New Hugo Site"
+title = "Binary Redneck"
