Updated config for demo uri

--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseURL = "http://binaryredneck.net/"
+baseURL = "https://hugo.binaryredneck.net/"
 languageCode = "en-us"
 title = "Binary Redneck"
 
