--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,4 @@
-*.jpg filter=lfs diff=lfs merge=lfs -text
-*.png filter=lfs diff=lfs merge=lfs -text
+static/**/*.jpg filter=lfs diff=lfs merge=lfs -text
+static/**/*.png filter=lfs diff=lfs merge=lfs -text
+content/**/*.jpg filter=lfs diff=lfs merge=lfs -text
+content/**/*.png filter=lfs diff=lfs merge=lfs -text
