--- a/config.toml
+++ b/config.toml
@@ -20,3 +20,11 @@ googleAnalytics = "" #Google Analytics ID
 [params]
     tagline = ""
     customCSS = []  #Optional Customised CSS
+
+[menu]
+
+  [[menu.main]]
+    identifier = "about"
+    name = "About"
+    url = "/about"
+    weight = -110
